<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.Discover">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_01">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/descTextView"
                android:text="@string/text_discover_screen" />

            <EditText
                style="@style/searchEditText"
                android:drawableLeft="@drawable/ic_search_white_24dp"
                android:hint="@string/search_edit_text" />

            <TextView
                style="@style/genreTextView"
                android:text="@string/genre_pop" />

            <View style="@style/divider" />

            <HorizontalScrollView style="@style/horizontalScroll">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/album_1"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_2" />

                    <ImageView
                        android:id="@+id/album_2"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_5" />

                    <ImageView
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_11" />

                    <ImageView
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_12" />

                </LinearLayout>

            </HorizontalScrollView>


            <TextView
                style="@style/genreTextView"
                android:text="@string/genre_rock" />

            <View style="@style/divider" />

            <HorizontalScrollView style="@style/horizontalScroll">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/album_3"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_3" />

                    <ImageView
                        android:id="@+id/album_4"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_6" />

                    <ImageView
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_13" />

                    <ImageView
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_14" />

                </LinearLayout>

            </HorizontalScrollView>


            <TextView
                style="@style/genreTextView"
                android:text="@string/genre_chill" />

            <View style="@style/divider" />

            <HorizontalScrollView style="@style/horizontalScroll">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/album_5"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_7" />

                    <ImageView
                        android:id="@+id/album_6"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_8" />

                    <ImageView
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_15" />

                    <ImageView
                        style="@style/album_cover_image"
                        android:contentDescription="@string/contentDescription_albums"
                        android:src="@drawable/album_cover_18" />

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
